<resources>
    <string name="app_name">EcoCity</string>
    <string-array name="importancias">
        <item>Baja</item>
        <item>Media</item>
        <item>Alta</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- activity_add.xml -->
    <string name="title">Título</string>
    <string name="description">Descripción:</string>
    <string name="ubicacion">Seleccionar ubicación</string>
    <string name="picture">HACER FOTO</string>
    <string name="guardar">Guardar</string>
    <!-- activity_chat_incidencia.xml -->
    <string name="chatIncidencia">Incidencia</string>
    <string name="escribeMensaje">Escribe un mensaje...</string>
    <string name="enviar">Enviar</string>
    <!-- activity_detalle.xml -->
    <string name="back">Volver</string>
    <string name="photo">Foto de la incidencia</string>
    <string name="location">Ubicación de la incidencia:</string>
    <string name="chat">CHAT</string>
    <!-- activity_login.xml -->
    <string name="acceso">ACCESO</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="enter">ENTRAR</string>
    <string name="register">¿No tienes cuenta? Regístrate aquí</string>
    <!-- activity_main.xml -->
    <string name="incidents">INCIDENCIAS</string>
    <!-- activity_maps.xml -->

    <!-- activity_soporte.xml -->
    <string name="chatBot">Soporte Técnico</string>
    <string name="technical">Problema técnico</string>
    <string name="consult">Consulta general</string>
    <string name="another">Otro</string>
    <!-- activity.registro.xml -->
    <string name="create">Crear Cuenta</string>
    <string name="join">Únete a EcoCity para reportar incidencias</string>
    <string name="name">Nombre</string>
    <string name="lastname">Apellidos</string>
    <string name="email">Correo electrónico</string>
    <string name="password2">Contraseña (mín. 6 caracteres)</string>
    <string name="REGISTER">REGISTRARSE</string>
    <string name="inAlready">¿Ya tienes cuenta? Inicia sesión</string>
    <!-- item_incidencia -->

</resources>