<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etTitulo"
        android:hint="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etDescripcion"
        android:hint="@string/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spinnerImportancia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/btnUbicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ubicacion"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/btnGuardar"
        android:text="@string/guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
